--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aaabimengineeringservice-cmd.github.io/aaa_bim_eng",
+ "homepage": "https://aaabimengineeringservice-cmd.github.io/aaa_bim_eng",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
